--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Home</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
+<html>
+    <head>
+        <title>Welcome Cohort!</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+​
+    <body>
+        <h1>Welcome to GitHub Pages!</h1>
+        <p>This is GitHub Pages, Cohorts pushed up code via Git</p>
+        <div><img src="images/mtech.png"></div>
+​
+    </body>
 </html>
