--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Welcome to GitHub Pages!</h1>
         <p>This is GitHub Pages, Cohorts pushed up code via Git</p>
-        <div><img src="images/mtech.png"></div>
+        <div><a href="https://mtec.instructure.com"><img src="images/mtech.png"></a></div>
 ​
     </body>
 </html>
